# PipelineNogTech

./: .dockerignore  .env.config  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  luigi.cfg  main.py  pyproject.toml
.claude/: launch.json
api/: __init__.py
api/api_brasil/: api_cep.py
api/dto/: __init__.py  response_cep.py
config/: settings.py
dashboard/: README.md  data.js  generate_dashboard_data.py  index.html
databases/: cep_cache.json  holiday_cache.json
documents/: FLUXO_LUIGI.md  PIPELINE_NOGTECH.excalidraw
domain/entities/: response_cep.py  response_holiday.py
infrastructure/: address_cache.py  holiday_cache.py
infrastructure/cache/: address_cache.py  holiday_cache.py  icache.py
infrastructure/utils/: anonymization_utils.py  file_utils.py  format_cep.py  format_cpf.py  format_date.py  format_float.py
pipeline/extracts/: extract_addresses_transaction.py  extract_engagement.py  extract_transactions.py
pipeline/transform/: transform_engagaments.py  transform_engagement_transactions.py  transform_transactions.py
pipelines/extract/: extract_engagement.py  extract_transactions.py
pipelines/load/: load_data_lake.py
pipelines/transform/: enrich_transactions_address.py  enrich_transactions_holiday.py  transaction_anonymization.py  transform_engagement.py  transform_engagement_transactions.py  transform_transactions.py
services/: brasil_api_cep_service.py  brasil_api_holiday_service.py  brasil_api_service.py
tests/: test_utils.py
utils/: __init__.py  format_cep.py  format_cpf.py  format_date.py  format_float.py
(+8 files in other folders)
